--- a/frontend/MeetupForFitnessIOS/MeetupForFitness/Base.lproj/Main.storyboard
+++ b/frontend/MeetupForFitnessIOS/MeetupForFitness/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w7I-sv-hbY">
-                                <rect key="frame" x="114" y="569" width="146" height="29"/>
+                                <rect key="frame" x="114" y="618" width="146" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="DZH-fu-5eC"/>
                                 </constraints>
@@ -100,13 +100,20 @@
                                     <constraint firstAttribute="height" constant="128" id="AoM-zK-Jbm"/>
                                 </constraints>
                             </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="g8P-le-PYR">
+                                <rect key="frame" x="177" y="213" width="20" height="20"/>
+                                <rect key="contentStretch" x="0.050000000000000003" y="0.0" width="1" height="1"/>
+                            </activityIndicatorView>
                         </subviews>
-                        <color key="backgroundColor" red="0.013426427729427814" green="0.92600518465042114" blue="0.99080938100814819" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.7477080225944519" green="0.94061034917831421" blue="0.77124500274658203" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="tGK-hI-uPZ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="231" id="2bH-Ad-EsW"/>
+                            <constraint firstItem="g8P-le-PYR" firstAttribute="top" secondItem="OTF-Qt-HTq" secondAttribute="bottom" constant="20" id="3v3-Mi-xzO"/>
+                            <constraint firstItem="g8P-le-PYR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="161" id="8vh-pi-17h"/>
                             <constraint firstItem="vOX-Bn-alD" firstAttribute="top" secondItem="tGK-hI-uPZ" secondAttribute="bottom" constant="16" id="BqC-KF-HUv"/>
                             <constraint firstItem="vOX-Bn-alD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="18" id="Ejv-cJ-UK8"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="w7I-sv-hbY" secondAttribute="bottom" constant="20" id="IoB-lu-Wpa"/>
+                            <constraint firstItem="tGK-hI-uPZ" firstAttribute="top" secondItem="g8P-le-PYR" secondAttribute="bottom" constant="18" id="LlX-gP-Vph"/>
                             <constraint firstAttribute="trailingMargin" secondItem="tGK-hI-uPZ" secondAttribute="trailing" constant="19" id="Mck-ds-LCo"/>
                             <constraint firstItem="sW4-qq-Q3o" firstAttribute="centerX" secondItem="dyh-xG-BTu" secondAttribute="centerX" id="UCN-jx-Wh4"/>
                             <constraint firstItem="dyh-xG-BTu" firstAttribute="top" secondItem="vOX-Bn-alD" secondAttribute="bottom" constant="16" id="UIW-sq-bwV"/>
@@ -116,6 +123,7 @@
                             <constraint firstItem="dyh-xG-BTu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="18" id="YVV-6I-myk"/>
                             <constraint firstItem="OTF-Qt-HTq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="18" id="YVf-d4-LIZ"/>
                             <constraint firstItem="w7I-sv-hbY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="98" id="YkV-5v-2hM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="g8P-le-PYR" secondAttribute="trailing" constant="162" id="Z0Y-vI-V7R"/>
                             <constraint firstItem="OTF-Qt-HTq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="45" id="ZaE-zl-Wvl"/>
                             <constraint firstAttribute="trailingMargin" secondItem="w7I-sv-hbY" secondAttribute="trailing" constant="99" id="bFw-Ou-k2M"/>
                             <constraint firstAttribute="trailingMargin" secondItem="vOX-Bn-alD" secondAttribute="trailing" constant="19" id="gIo-c9-ggP"/>
@@ -202,7 +210,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.013426427729427814" green="0.92600518465042114" blue="0.99080938100814819" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.7477080225944519" green="0.94061034917831421" blue="0.77124500274658203" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="72a-bZ-Q1O" secondAttribute="trailing" constant="32" id="15u-yC-crY"/>
                             <constraint firstAttribute="trailingMargin" secondItem="5R1-zy-Fhy" secondAttribute="trailing" constant="36" id="6rv-zt-AUa"/>
@@ -866,12 +874,12 @@
                                 <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" highlighted="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bordered" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="jYY-o4-Cke" colorLabel="IBBuiltInLabel-Yellow">
                                     <rect key="frame" x="87" y="16" width="200" height="29"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="backgroundColor" red="0.14901960780000001" green="0.64705882349999999" blue="0.50588235290000005" alpha="1" colorSpace="calibratedRGB"/>
                                     <segments>
                                         <segment title="My Activity"/>
                                         <segment title="Team Activity"/>
                                     </segments>
-                                    <color key="tintColor" cocoaTouchSystemColor="lightTextColor"/>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </segmentedControl>
                             </subviews>
                         </scrollView>
@@ -908,7 +916,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" red="0.36470588240000001" green="0.2901960784" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="backgroundColor" red="0.084444500505924225" green="0.73992758989334106" blue="0.65958100557327271" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="bottom" secondItem="QdD-eq-Lg0" secondAttribute="bottom" constant="28" id="0MV-po-3qO"/>
                                                         <constraint firstAttribute="bottom" secondItem="QnY-vD-Et4" secondAttribute="bottom" constant="50" id="470-Vq-b5E"/>
@@ -1046,6 +1054,7 @@
                                                                 </button>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# 2618-3157" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mqA-K5-PE9">
                                                                     <rect key="frame" x="0.0" y="0.0" width="335" height="49"/>
+                                                                    <color key="backgroundColor" red="0.3179658055305481" green="0.91547179222106934" blue="0.61887133121490479" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <fontDescription key="fontDescription" name="OpenSans-Light" family="Open Sans" pointSize="18"/>
                                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -1067,11 +1076,12 @@
                                                                 </userDefinedRuntimeAttribute>
                                                             </userDefinedRuntimeAttributes>
                                                         </view>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image" translatesAutoresizingMaskIntoConstraints="NO" id="626-1X-cQg">
+                                                        <imageView userInteractionEnabled="NO" alpha="0.94999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image" translatesAutoresizingMaskIntoConstraints="NO" id="626-1X-cQg">
                                                             <rect key="frame" x="0.0" y="49" width="335" height="116"/>
+                                                            <color key="backgroundColor" red="0.30728578567504883" green="0.91297376155853271" blue="0.8121599555015564" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </imageView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="srf-F1-Ebx" userLabel="LeftVoew">
-                                                            <rect key="frame" x="10" y="117" width="105" height="40"/>
+                                                            <rect key="frame" x="10" y="117" width="104.5" height="40"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="REQUESTS" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w2u-zf-OSc">
                                                                     <rect key="frame" x="0.0" y="0.0" width="53" height="12"/>
@@ -1096,20 +1106,20 @@
                                                             </constraints>
                                                         </view>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Czj-cF-P7k" userLabel="CenterView">
-                                                            <rect key="frame" x="116" y="117" width="104" height="40"/>
+                                                            <rect key="frame" x="115.5" y="117" width="104" height="40"/>
                                                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </view>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ven-O3-bbu" userLabel="RightView">
-                                                            <rect key="frame" x="221" y="117" width="104" height="40"/>
+                                                            <rect key="frame" x="220.5" y="117" width="104.5" height="40"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ijn-wP-AES">
-                                                                    <rect key="frame" x="83" y="0.0" width="21" height="12"/>
+                                                                    <rect key="frame" x="83.5" y="0.0" width="21" height="12"/>
                                                                     <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="10"/>
                                                                     <color key="textColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Soccer" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IXm-Dt-NwI">
-                                                                    <rect key="frame" x="47" y="19" width="57" height="21"/>
+                                                                    <rect key="frame" x="47.5" y="19" width="57" height="21"/>
                                                                     <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="18"/>
                                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -1349,13 +1359,13 @@
                                                         </view>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="38A-rD-RWa">
                                                             <rect key="frame" x="22" y="3" width="291" height="41"/>
-                                                            <color key="backgroundColor" red="0.99607843139999996" green="0.74509803919999995" blue="0.086274509799999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="backgroundColor" red="0.14901960780000001" green="0.64705882349999999" blue="0.50588235290000005" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="41" id="Mgg-8e-CXV"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="18"/>
                                                             <state key="normal" title="Collapse">
-                                                                <color key="titleColor" red="0.27058823529999998" green="0.2156862745" blue="0.08235294118" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <color key="titleColor" red="0.98113781213760376" green="0.94916695356369019" blue="0.93626970052719116" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             </state>
                                                             <userDefinedRuntimeAttributes>
                                                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -1394,7 +1404,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" red="0.094396390020847321" green="0.4585500955581665" blue="0.51777088642120361" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="rhL-2L-dSX" secondAttribute="trailing" id="0bj-9o-4Bk"/>
                                                 <constraint firstAttribute="trailing" secondItem="I8E-eD-Aja" secondAttribute="trailing" id="6Dj-2U-kYX"/>
@@ -1452,7 +1462,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="AppLogo" width="500" height="174"/>
+        <image name="AppLogo" width="500" height="146"/>
         <image name="Image" width="193" height="163"/>
         <image name="arrow" width="16" height="25"/>
         <image name="burger" width="38" height="29"/>
@@ -1466,7 +1476,7 @@
         <image name="tab_profile" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="pcK-PM-0cU"/>
         <segue reference="TC2-9B-Tio"/>
-        <segue reference="B5A-C8-rHb"/>
     </inferredMetricsTieBreakers>
 </document>
